# KnightsTourSolver

./: .gitignore  BUILD_PLAN.md  CMakeLists.txt  README.md
include/: Benchmark.h  Board.h  Exporter.h  Solver.h
src/: Benchmark.cpp  Board.cpp  Exporter.cpp  Solver.cpp  main.cpp
